--- a/README.Rmd
+++ b/README.Rmd
@@ -76,7 +76,10 @@ rank_mat = rank_coexpression(rank_mat)        #Get rank standardized co-expressi
 
 ## Preserved co-expression
 
-Our measure of preserved co-expression quantifies the degree to which the top 10 co-expressed partners of a gene are shared between two co-expression networks. We use the auroc statistic, so for a single gene with an auroc of 1, the top 10 co-expressed partners for that gene across the two networks are exactly the same. 
+Our measure of preserved co-expression quantifies the degree to which the top 10 co-expressed partners of a gene are shared between two co-expression networks, one reference and one test network. 
+We use the auroc statistic, so for a single gene with an auroc of 1, the top 10 co-expressed partners for that gene across the two networks are exactly the same.
+An auroc close to 0.5 shows there is no signal, the top 10 co-expressed partners are randomly distributed in the test network.
+An auroc of exactly 0.5 represents a gene with 0 expression in the test network.
 
 We provide our aggregate fetal brain co-expression network to act as the reference network when quantifying preserved co-expression.
 You can compute the preserved co-expression of individual genes or of gene sets. We use the average preserved co-expression auroc across genes for the preserved co-expression score of that gene set.
@@ -139,7 +142,8 @@ BP_GO_results = get_GO_term_scores(aggregated_fetal_network, rank_mat, BP_GO_mat
 ## Fetal and Organoid meta-analysis
 
 We provide the results of our meta-analysis computing the preserved co-expression of 51 fetal and 124 organoid single-cell RNA-sequencing datasets.
-The following functions calculate the preserved co-expression scores of the top 100
+The following functions calculate the preserved co-expression scores of the top 100 MetaMarkers per cell-type
+The red line indicates the percentile of the user's co-expression network in either the fetal or organoid score distributions.
 
 ``` r
 data('fetal_meta_markers', package = 'preservedCoexp')   #Dataframe of fetal MetaMarkers 
